# PrimeNumbersBefore

./: pyproject.toml
primenumbersbefore/: prime_numbers_before.py
tests/: test_primenumbersbefore.py
